# OpenMythosQuantum

./: .abacus.donotdelete  .pre-commit-config.yaml  ACTION_MANIFEST.md  ANALYSIS.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  FALSIFIABLE_TESTS.md  Makefile  OPENMYTHOS_ANALYSIS.md  README.md  SECURITY.md  agents.md  package.json  pyproject.toml
.github/: pull_request_template.md
config/: .secrets.example
docs/: api-deprecation-policy.md  authentication.md  branch-protection-rules.md  contract-testing.md  deployment.md  freeze-snapshot.md  observability.md  phase_d_manuscript.tex  plugin-development.md  plugins.md  runtime-foundation.md  semantic-versioning-policy.md  training-compute-strategy.md  troubleshooting.md
examples/: README.md  circuit-optimization-example.py  generated-python-client-example.py  generated-typescript-client-example.ts  quickstart.py  training-job-example.py  webhook-integration-example.py
openapi/: openapi.yaml
plugins/: REGISTRY_SPEC.md  descriptor.schema.json  marketplace.json  registry.py
reference-implementations/: freeze_snapshot_pattern.md  go_gateway_pattern_notes.md  plugin_descriptor_example.json  plugin_loading_mechanism.md
research/: AUTONOMOUS_AGENTIC_QUANTUM_INFRASTRUCTURE_BLUEPRINT.md  BLUEPRINT_V1.1_VERIFIED.md  BLUEPRINT_VERIFICATION.md  INFRASTRUCTURE_ANALYSIS.md  PROTO_ASSESSMENT.md  RECOMMENDED_ALIGNMENT.md  SMART_INTEGRATION_PLAN.md  WINDOWS_UX_NOTES.md
runtime/: server.py
scripts/: generate-api-docs.sh  generate-clients.sh  generate-server-stubs.sh  lint-openapi.sh  release.sh  setup-dev.sh  (+2 more)
(+105 files in other folders)
